--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #87CEEB;
+    background-color: #009FBD;
     font-family: 'Press Start 2P', sans-serif;
 }
 
