--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,12 @@ button {
     border: 2px solid #333;
     border-radius: 5px;
     transition: background-color 0.3s ease, color 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+
+button .material-symbols-outlined {
+    padding-left: 10px;
 }
 
 button:hover {
