--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,44 @@ canvas {
 #about, #reset {
     font-family: 'Times New Roman', Times, serif;
 }
+
+/* Media Query for Responsive Design */
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 16px;
+    }
+
+    h1{
+        font-size: 50%;
+    }
+
+    #Mainmenu, .overlay {
+        width: 70%;
+    }
+
+    button {
+        font-size: 16px;
+        padding: 8px 16px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    canvas {
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+    canvas {
+        width: 60%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 1201px) {
+    canvas {
+        width: 50%;
+        margin: 0 auto;
+    }
+}
