--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    color: white;
+    font-family: 'Press Start 2P', sans-serif;
+}
+
+#preloader-content {
+    text-align: center;
+}
+
+#preloader img {
+    width: 100px;
+    height: 100px;
+}
+#preloader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    font-size: 24px;
+    font-family: 'Press Start 2P', sans-serif;
+}
 
 body {
     display: flex;
