--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@
     flex-direction: column;
 }
 
+#preloader-content h1 {
+    font-size: 50px;
+}
+
 #progress-bar-container {
     width: 80%;
     height: 20px;
